tests/ui/traits/next-solver/specialization-unconstrained.stderr
error[E0271]: type mismatch resolving `<u32 as Default>::Id == ()`
  --> $DIR/specialization-unconstrained.rs:19:12
   |
LL |     test::<u32, ()>();
   |            ^^^ types differ
   |
note: required by a bound in `test`
  --> $DIR/specialization-unconstrained.rs:16:20
   |
LL | fn test<T: Default<Id = U>, U>() {}
   |                    ^^^^^^ required by this bound in `test`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
